Fixed Header alignment

--- a/webapp/src/main/webapp/css/remedi.css
+++ b/webapp/src/main/webapp/css/remedi.css
@@ -16,3 +16,8 @@
     margin-top: 30px;
     margin-bottom: 30px;
 }
+
+.row {
+    margin-right: 0px;
+    margin-left:  0px;
+}
